<resources>
    <!-- Activity Titles -->
    <string name="app_name">GeoTracking</string>
    <string name="title_activity_tracking_finder">Tracking Finder</string>
    <string name="search_tracking">Search Tracking</string>
    <string name="edit_tracking">Edit Tracking</string>
    <string name="suggested_tracking">Tracking Suggestions</string>

    <!-- Tabs -->
    <string name="tab_text_1">Trackable</string>
    <string name="tab_text_2">Tracking</string>

    <!-- Tab Info -->
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="category">Category</string>
    <string name="dialog_selection_close">Close</string>

    <!-- Global use -->
    <string name="title">Title</string>
    <string name="start_time">Start Time</string>
    <string name="meet_date">Meet Date</string>
    <string name="meet_time">Meet Time</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="empty">-- --</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>

    <!-- Filter -->
    <string name="dialog_title_1">Select cuisine</string>
    <string name="dialog_selection_add">Add</string>

    <!-- tracking_finder -->
    <string name="search">Search</string>
    <string name="suggest">Suggest Now</string>
    <string name="select_meet_time">Select Meet Time</string>
    <string name="select_date">Select Date</string>

    <!-- edit_tracking -->
    <string name="confirm_edit">Edit</string>
    <string name="remove">Remove</string>

    <!--Map -->
    <string name="title_activity_maps">Map</string>
    <string name="tracking_arrival">Tracking has arrived</string>
    <string name="tracking_arrival_end">Tracking has ended</string>

    <!--setting_values-->
    <string name="setting_name">Setting</string>

    <!--notification_values-->
    <string name="notification_title">New Tracking</string>
    <string name="notification_category">Suggestion</string>
    <string name="set_notification">Turn on Suggestion</string>
    <string name="set_notification_time">Set Interval for Suggestion</string>
    <string name="next_tracking">Next Tracking</string>
    <string name="add_tracking">Add Tracking</string>
    <string name="no_tracking">No tracking available</string>
    <string name="tracking_arriving">Your tracking will be arriving soon</string>

    <!--location_values-->
    <string name="reminder">Reminder</string>
    <string name="set_reminder">Turn on Reminder</string>

    <!-- Network/Internet -->
    <string name="internet_available">Connected to Internet</string>
    <string name="internet_unavailable">Not Connected to Internet</string>

</resources>
