<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.s3628594.view.EditTrackingActivity">

    <EditText
        android:id="@+id/edit_title"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_meet_date"
        android:text="@string/meet_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:layout_below="@id/edit_title"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edit_meet_time"
        android:text="@string/meet_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:layout_below="@id/edit_meet_date"
        android:inputType="time"/>

    <Button
        android:id="@+id/confirm_edit"
        android:text="@string/confirm_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_meet_time"
        android:layout_toEndOf="@id/cancel"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_meet_time"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/remove"
        android:text="@string/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_meet_time"
        android:layout_toStartOf="@id/cancel"
        android:layout_centerInParent="true"/>

</RelativeLayout>
